--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,5 +4,8 @@
 
     <item
         android:id="@+id/idAddNew"
-        android:title="Добавить" />
+        android:title="Новое простое" />
+    <item
+        android:id="@+id/idNewCompound"
+        android:title="Новое составное" />
 </menu>
