Activity "New template" is added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnAddNew"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/btn_plus" />
+
     <TableLayout
         android:id="@+id/mainTable"
         android:layout_width="match_parent"
@@ -14,4 +24,5 @@
         tools:layout_editor_absoluteY="483dp">
 
     </TableLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
