The editor for compound exercises works in general

--- a/app/src/main/res/layout/add_step_placeholder.xml
+++ b/app/src/main/res/layout/add_step_placeholder.xml
@@ -10,10 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="@android:color/background_light"
+        android:background="@drawable/border"
         android:paddingTop="10pt"
         android:paddingBottom="10pt"
         app:srcCompat="@android:drawable/ic_menu_add"
-        app:strokeColor="@color/black_overlay"
-        app:strokeWidth="10dp" />
+        />
 </TableRow>
