--- a/app/src/main/res/layout/content_new_limited.xml
+++ b/app/src/main/res/layout/content_new_limited.xml
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/btnSave"
+        android:id="@+id/btnRestore"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Сохранить"
