--- a/app/src/main/res/layout/aexercise_layout.xml
+++ b/app/src/main/res/layout/aexercise_layout.xml
@@ -13,6 +13,17 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="10pt"
+            android:layout_marginTop="5pt"
+            android:layout_weight="0.1"
+            android:background="@color/dark_blue"
+            app:srcCompat="@drawable/back" />
+
         <TextView
             android:id="@+id/lbPercent"
             android:layout_width="match_parent"
