The color of floating action button has been changed in two activities

--- a/app/src/main/res/layout/activity_exercise_progress.xml
+++ b/app/src/main/res/layout/activity_exercise_progress.xml
@@ -111,6 +111,7 @@
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:backgroundTint="@color/dark_blue"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
