--- a/app/src/main/res/layout/aexercise_layout.xml
+++ b/app/src/main/res/layout/aexercise_layout.xml
@@ -32,7 +32,7 @@
             android:background="@color/dark_blue"
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center_vertical"
-            android:text="0%"
+            android:text="- -"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="28pt"
@@ -46,7 +46,6 @@
             android:layout_weight="0.1"
             android:background="@color/dark_blue"
             android:gravity="clip_horizontal|center_vertical"
-            android:text="0(0)"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="10pt" />
