--- a/app/src/main/res/layout/exsetrow.xml
+++ b/app/src/main/res/layout/exsetrow.xml
@@ -29,4 +29,14 @@
         android:paddingRight="5pt"
         android:textAlignment="textEnd"
         android:textSize="6pt" />
+
+    <TextView
+        android:id="@+id/lbDirection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingTop="8pt"
+        android:paddingRight="5pt"
+        android:textAlignment="textEnd"
+        android:textSize="6pt" />
 </TableRow>
