Trend arrows were added on the main screen

--- a/app/src/main/res/layout/exsetrow.xml
+++ b/app/src/main/res/layout/exsetrow.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/lbName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:paddingLeft="5pt"
         android:paddingTop="8pt"
@@ -15,6 +17,7 @@
         android:id="@+id/lbPercent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:paddingTop="8pt"
         android:textAlignment="textEnd"
@@ -24,19 +27,17 @@
         android:id="@+id/lbDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:paddingTop="8pt"
         android:paddingRight="5pt"
         android:textAlignment="textEnd"
         android:textSize="6pt" />
 
-    <TextView
-        android:id="@+id/lbDirection"
+    <ImageView
+        android:id="@+id/imgTrendArrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:paddingTop="8pt"
-        android:paddingRight="5pt"
-        android:textAlignment="textEnd"
-        android:textSize="6pt" />
+        android:layout_gravity="center_vertical"
+        app:srcCompat="@drawable/right_arrow_1" />
 </TableRow>
