--- a/app/src/main/res/layout/aexercise_layout.xml
+++ b/app/src/main/res/layout/aexercise_layout.xml
@@ -13,16 +13,33 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/btnBack"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="10pt"
             android:layout_marginTop="5pt"
-            android:layout_weight="0.1"
-            android:background="@color/dark_blue"
-            app:srcCompat="@drawable/back" />
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/btnBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:layout_marginLeft="3pt"
+                android:layout_weight="0.1"
+                android:background="@color/dark_blue"
+                app:srcCompat="@drawable/left_arrow" />
+
+            <TextView
+                android:id="@+id/tvExName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5pt"
+                android:layout_weight="0.9"
+                android:text="Exercise name"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@android:color/darker_gray" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/lbPercent"
@@ -55,7 +72,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.4"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical">
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/buttonsPlaceholder"
