--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -27,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3pt"
-                android:text="TextView"
+                android:text="@string/msgAboutTitle"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/darker_gray" />
         </LinearLayout>
@@ -73,13 +73,13 @@
         android:id="@+id/tvVersion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="172dp"
+        android:layout_marginStart="170dp"
         android:layout_marginTop="92dp"
-        android:layout_marginEnd="180dp"
+        android:layout_marginEnd="170dp"
+        android:gravity="center"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvAuthor" />
 
@@ -89,9 +89,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="169dp"
         android:layout_marginEnd="169dp"
+        android:gravity="center"
         android:text="2020"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvVersion"/>
+        app:layout_constraintTop_toBottomOf="@id/tvVersion" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
