--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
 
-        <LinearLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id= "@+id/tooBar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:gravity="center"
-            android:orientation="vertical">
-
+            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
@@ -30,7 +28,9 @@
                 android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/darker_gray" />
-        </LinearLayout>
+
+        </androidx.appcompat.widget.Toolbar>
+
     </com.google.android.material.appbar.AppBarLayout>
 
 
