--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,9 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/idAddNew"
-        android:title="Новое простое" />
-    <item
-        android:id="@+id/idNewCompound"
-        android:title="Новое составное" />
+        android:id="@+id/idAbout"
+        android:title="@string/menuAbout" />
 </menu>
