--- a/app/src/main/res/layout/exsetrow.xml
+++ b/app/src/main/res/layout/exsetrow.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="6pt"
         android:layout_marginBottom="6pt"
         android:layout_marginLeft="5pt"
-        app:srcCompat="@drawable/right_arrow_1" />
+        app:srcCompat="@drawable/empty" />
 
     <TextView
         android:id="@+id/lbPercent"
