--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
         app:backgroundTint="@color/dark_blue"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
