--- a/app/src/main/res/layout/aexercise_layout.xml
+++ b/app/src/main/res/layout/aexercise_layout.xml
@@ -35,21 +35,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5pt"
-                android:layout_weight="0.9"
+                android:layout_weight="0.8"
+                android:gravity="center_horizontal|center_vertical"
                 android:text="Exercise name"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="@android:color/darker_gray" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:layout_gravity="left|center_vertical"
+                android:layout_marginRight="3pt"
+                android:background="@color/dark_blue"
+                app:srcCompat="@drawable/empty_placeholder" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/lbPercent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
+            android:layout_weight="0.1"
             android:background="@color/dark_blue"
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center_vertical"
-            android:text="- -"
+            android:text="— —"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="28pt"
@@ -81,6 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.3"
+            android:layout_marginTop="20pt"
             android:gravity="center_vertical|center_horizontal"
             android:orientation="horizontal">
         </LinearLayout>
