--- a/app/src/main/res/drawable/dashed_border.xml
+++ b/app/src/main/res/drawable/dashed_border.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:bottom="1dp"
+        android:left="-6dp"
+        android:right="-6dp"
+        android:top="-6dp">
 
-    <stroke
-        android:width="1px"
-        android:color="@color/black_overlay"
-        android:dashGap="5dp"
-        android:dashWidth="15dp">
-
-    </stroke>
-
-    <!-- The radius makes the corners rounded -->
-    <corners
-        android:radius="2dp"   >
-    </corners>
-
-</shape>
+        <shape android:shape="rectangle">
+            <stroke
+                android:width="2px"
+                android:color="@color/black_overlay"
+                android:dashWidth="9dp"
+                android:dashGap="3dp"></stroke>
+        </shape>
+    </item>
+</layer-list>
