--- a/app/src/main/res/layout/activity_exercise_progress.xml
+++ b/app/src/main/res/layout/activity_exercise_progress.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10pt"
-        android:layout_marginBottom="5pt"
+        android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/stdtoobar">
 
@@ -22,18 +22,20 @@
             android:id="@+id/tvDateStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginRight="10pt"
+            android:background="@drawable/dashed_border"
             android:gravity="center"
-            android:text=""
+            android:text="12 junuary 2020"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tvDateEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginLeft="10pt"
+            android:background="@drawable/dashed_border"
             android:gravity="center"
-            android:text=""
+            android:text="34 junuary 2020"
             android:textSize="18sp" />
     </LinearLayout>
 
@@ -222,11 +224,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.2"
+            android:layout_marginTop="10pt"
+            android:layout_marginBottom="10pt"
+            android:background="@drawable/dashed_border"
             android:gravity="center_horizontal|center_vertical"
-            android:text="История..."
             android:textAlignment="center"
-            android:textSize="11pt" />
+            android:textSize="11pt"
+            tools:text="@string/txtButtonHistoryTitle" />
 
     </LinearLayout>
 
