--- a/app/src/main/res/menu/history_actions.xml
+++ b/app/src/main/res/menu/history_actions.xml
@@ -2,8 +2,15 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/itemActionCheckAll"
+        android:title="Item"
+        app:showAsAction="always"
+        android:icon="@drawable/check_all"
+        />
+    <item
         android:id="@+id/itemActionDeleteResults"
+        android:enabled="false"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="Item"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
 </menu>
